# qt-cap

./: .gitignore  Cargo.toml
.github/actions/build-capture-engine/: action.yml
.github/actions/build-ocr/: action.yml
.github/actions/build-ocr-engine/: action.yml
.github/workflows/: distribute.yml
crates/sys-display-hotplug/src/: lib.rs
crates/sys-shutter-suppressor/: Cargo.toml
crates/sys-shutter-suppressor/src/: lib.rs
crates/sys-single-instance/src/: lib.rs
sidecars/paddle-ocr/: ocr-engine.spec
sidecars/paddle-ocr/patches/: cpp_extension.py  iaa_augment.py  paddle_core.py  paddleocr.py
sidecars/qt-capture/: Cargo.toml  Dockerfile
sidecars/qt-capture/native/: CMakeLists.txt  build.sh
sidecars/qt-capture/native/qml/: CaptureWindow.qml  RectangleCanvas.qml  SquiggleCanvas.qml
sidecars/qt-capture/native/src/: main.cpp
sidecars/qt-capture/native/src/controller/: CaptureController.h
sidecars/qt-capture/native/src/grabber/: GrabberMac.mm
sidecars/qt-capture/native/src/qml/: CaptureController.cpp
sidecars/qt-capture/native/src/surface/: OverlayWindow.cpp  OverlayWindow.h  OverlayWindow.mm  RectangleCanvas.cpp  RectangleCanvas.h  SquiggleCanvas.cpp  SquiggleCanvas.h
sidecars/qt-capture/src/: main.rs  paths.rs  qt_app.rs
xtask/: Cargo.toml
xtask/src/: capture_sidecar.rs  main.rs  ocr_sidecar.rs  tauri.rs  utils.rs
xtask/src/qt/: linux.rs  macos.rs  mod.rs  windows.rs
